<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>io.intino.itrules</groupId>
	<artifactId>dsl</artifactId>
	<name>dsl</name>
	<version>1.0.0</version>
	<packaging>jar</packaging>
	<properties>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<testSourceDirectory>test</testSourceDirectory>
		<outputDirectory>../out/production/dsl</outputDirectory>
		<testOutputDirectory>../out/test/dsl</testOutputDirectory>
		<directory>../out/build/dsl</directory>
		<testResources>
			<testResource><directory>test-res</directory></testResource>
		</testResources>
		<plugins>

			<plugin>
				  <artifactId>maven-clean-plugin</artifactId>
				  <version>3.0.0</version>
				  <configuration>
					<skip>true</skip>
				  </configuration>
				</plugin>
			 <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<executions>
					<execution>
						<id>default-compile</id>
						<phase>compile</phase>
						<goals>
							<goal>compile</goal>
						</goals>
						<configuration>
							<skipMain>true</skipMain>
						</configuration>
					</execution>
				</executions>
			</plugin><plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							<addClasspath>true</addClasspath>
							<packageName>io.intino.itrules</packageName>
							<classpathPrefix>dependency/</classpathPrefix>
						</manifest>
						<manifestSections>
						</manifestSections>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.6.1</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<useBaseVersion>false</useBaseVersion>
							<includeScope>runtime</includeScope>
							<overWriteReleases>false</overWriteReleases>
							<overWriteSnapshots>false</overWriteSnapshots>
							<overWriteIfNewer>true</overWriteIfNewer>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>3.4.0</version>
				<executions>
					<execution>
						<id>add-source</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>gen</source>
								<source>src</source>

							</sources>
						</configuration>
					</execution>
					<execution>
						<id>add-test-source</id>
						<phase>generate-test-sources</phase>
						<goals>
							<goal>add-test-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>test</source>
								<source>test-gen</source>

							</sources>
						</configuration>
						</execution>
				</executions>
			</plugin>
			 <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>


	<repositories>
		<repository>
			<id>intino-maven</id>
			<url>https://artifactory.intino.io/artifactory/releases</url>
			<snapshots><enabled>false</enabled></snapshots>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>intino-maven</id>
			<name>intino-maven</name>
			<url>https://artifactory.intino.io/artifactory/release-libraries</url>
		</repository>
	</distributionManagement>

	<dependencies>
		<dependency>
			<groupId>io.intino.itrules</groupId>
			<artifactId>engine</artifactId>
			<scope>compile</scope>
			<version>2.0.0</version>
		</dependency>
		<dependency>
			<groupId>io.intino.alexandria</groupId>
			<artifactId>logger</artifactId>
			<scope>compile</scope>
			<version>2.1.0</version>
		</dependency>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4</artifactId>
			<scope>compile</scope>
			<version>4.13.1</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<scope>compile</scope>
			<version>2.16.1</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
			<version>4.13.2</version>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<scope>test</scope>
			<version>3.25.3</version>
		</dependency>
	</dependencies>
</project>